django_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: django_app:1.1
        ports:
        - containerPort: 8000
       
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
    type: NodePort
    selector:
      app: django
    ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30036
